Fixes to team page on small screens, mobile nav for gallery pages

--- a/wp-content/themes/hmr-theme/assets/css/less/views/slideshow.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/slideshow.less
@@ -265,3 +265,9 @@
 		.opacity(100);
 	}
 }
+
+@media (max-width:767px) {
+	.big_arrow {
+		display:none;
+	}
+}
