--- a/wp-content/themes/hmr-theme/assets/css/less/views/team.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/team.less
@@ -220,6 +220,12 @@
 	background:@blueDark;
 }
 
+@media (min-width:1000px) {
+	.post-type-archive-team { 
+		min-height:1200px;
+	}
+}
+
 @media (max-width:1000px) and (min-width:768px) { 
 	#team {
 		height:540px;
